# MySQL_Practice

./: README.md
Library_System/: CMakeLists.txt  README.md  borrowing_method.sql  building_sql.sql  create_reservation_table.sql  create_trigger.sql  create_user.sql  index_method.sql  returning_method.sql  search_info.sql
Library_System/include/: database.h  database_operation.h
Library_System/src/: database.cpp  database_operation.cpp  main.cpp  main_borrowing_test.cpp  main_user_test.cpp
inventory-system/: CMakeLists.txt
inventory-system/include/: database_connection.h  i_inventory_repo.h  i_product_repo.h  i_warehouse_repo.h  inventory_app.h  inventory_item.h  inventory_repo.h  inventory_srv.h  product.h  product_repo.h  product_srv.h  warehouse.h  warehouse_repo.h  warehouse_srv.h
inventory-system/schema/: init.sql
inventory-system/src/: main.cpp  product_repo.cpp  warehouse_repo.cpp
